Lab06/7_ingress/demo01.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab06apictacte
  labels:
    app: lab06apictacte
  annotations:
    cloud.google.com/backend-config: '{"ports": {"37071":"my-backendconfig","38080":"my-backendconfig"}}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - name: mocks
      port: 37071
      targetPort: 7071
    - name: http
      port: 38080
      targetPort: 8080
  selector:
    app: lab06apictacte
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab06apictactebus
spec:
  selector:
    matchLabels:
      app: lab06apictacte
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: lab06apictacte
    spec:
      containers:
        - name: lab06apictacte
          image: mzegarra/lab06busctacte:0.0.2
          imagePullPolicy: IfNotPresent #Always
          readinessProbe:
             httpGet:
               path: /actuator/health
               port: 8080
             initialDelaySeconds: 20
             periodSeconds: 10
             timeoutSeconds: 10
             successThreshold: 1
             failureThreshold: 3
          livenessProbe:
            exec:
              command:
              - /bin/sh
              - -c
              - pgrep -f java
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1             
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 8080
            - containerPort: 7071
